--- a/app/globals.css
+++ b/app/globals.css
@@ -4,10 +4,8 @@
 @tailwind components;
 @tailwind utilities;
 
-
 body {
-  @apply bg-main dark:bg-main-dark bg-cover bg-fixed bg-no-repeat dark:text-white selection:bg-rose-500 selection:text-white;
+  @apply bg-main dark:bg-main-dark bg-cover bg-center bg-fixed bg-no-repeat dark:text-white selection:bg-rose-500 selection:text-white;
+  min-height: 100vh;
+  min-height: 100dvh;
 }
-
-
-
