--- a/app/globals.css
+++ b/app/globals.css
@@ -4,13 +4,22 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
-  @apply bg-main dark:bg-main-dark bg-cover bg-center bg-fixed bg-no-repeat dark:text-white selection:bg-rose-500 selection:text-white;
+html {
+  height: -webkit-fill-available;
+}
 
+body {
+  @apply bg-main dark:bg-main-dark bg-cover bg-center bg-no-repeat dark:text-white selection:bg-rose-500 selection:text-white;
+  background-attachment: fixed;
+  min-height: 100dvh;
+  min-height: -webkit-fill-available;
+  background-size: cover;
 }
 
 @media (max-width: 768px) {
   body {
-    @apply bg-main-mobile dark:bg-main-dark-mobile bg-cover bg-center bg-fixed bg-no-repeat dark:text-white selection:bg-rose-500 selection:text-white;
+    @apply bg-main dark:bg-main-dark bg-cover bg-center bg-no-repeat;
+    background-attachment: scroll;
+    background-size: cover;
   }
 }
