--- a/app/globals.css
+++ b/app/globals.css
@@ -8,11 +8,21 @@ html {
   height: -webkit-fill-available;
 }
 
+/* CSS custom properties para tema */
+:root {
+  --bg-image: url('/bg-main.webp');
+}
+
+[data-mode='dark'] {
+  --bg-image: url('/bg-main-dark.webp');
+}
+
 body {
   min-height: 100dvh;
   min-height: -webkit-fill-available;
   position: relative;
   color: theme('colors.black');
+  transition: color 0.2s ease-in-out;
 }
 
 body::before {
@@ -23,8 +33,11 @@ body::before {
   width: 100%;
   height: 100%;
   z-index: -1;
-  @apply bg-main dark:bg-main-dark bg-cover bg-center bg-no-repeat;
+  background-image: var(--bg-image);
   background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  transition: background-image 0.3s ease-in-out;
 }
 
 .dark body {
