--- a/app/globals.css
+++ b/app/globals.css
@@ -32,12 +32,22 @@ body::after {
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   z-index: -1;
   background-size: cover;
-  background-position: center;
+  background-position: center center;
   background-repeat: no-repeat;
+  background-attachment: fixed;
+  /* Force GPU acceleration and prevent recalculation during transforms */
+  transform: translate3d(0, 0, 0);
+  -webkit-transform: translate3d(0, 0, 0);
+  will-change: opacity;
+  backface-visibility: hidden;
+  -webkit-backface-visibility: hidden;
+  pointer-events: none;
+  /* Prevent background from being affected by child transforms */
+  isolation: isolate;
 }
 
 /* Light mode background - visible by default */
